crates/ferrum-interfaces/tests/ui/vnext/fail/trusted_aborted_sequence_binding_is_not_deserialize.rs
use ferrum_interfaces::vnext::TrustedAbortedSequenceBinding;

fn decode(bytes: &[u8]) {
    let _: TrustedAbortedSequenceBinding = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
